<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFC107"
    android:gravity="center|center_horizontal|center_vertical"
    android:orientation="vertical">


    <TextView
        android:id="@+id/second_text"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/second_frame_text"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Python"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Python" />

    <Button
        android:id="@+id/Java"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Java" />

    <Button
        android:id="@+id/R"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/R" />

    <TextView
        android:id="@+id/AI_Details1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="@string/AI_Details1"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/Exit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/Exit" />

</LinearLayout>