<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    android:gravity="center"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/first_fragment_text"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/hello_blank_fragment"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/AI"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/AI" />



    <Button
        android:id="@+id/DataScience"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/DataScience" />

    <Button
        android:id="@+id/MachineLearning"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/MachineLearning"
        android:visibility="visible" />

    <TextView
        android:id="@+id/AI_Details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/AI_Details"
        android:textColor="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold" />

</LinearLayout>